--- a/kooplexhub/education/templates/course_partial_list.html
+++ b/kooplexhub/education/templates/course_partial_list.html
@@ -10,7 +10,7 @@
     <div class="container-fluid">
       <div class="d-flex flex-row">
         <div class="d-flex flex-row justify-content-start" style="width:2%">
-         <div>{% dropdown_start_open_stop bindings=coursecontainerbindings ancestor=course ancestor_type='course' next_page=next_page %}</div>
+         <div>{% dropdown_start_open_stop bindings=coursecontainerbindings ancestor=ucb ancestor_type='course' next_page=next_page %}</div>
         </div>
 	  <div class="ms-5 d-flex flex-row justify-content-between"
 	       style="width:97%" 
