--- a/kooplexhub/education/templates/education_layout.html
+++ b/kooplexhub/education/templates/education_layout.html
@@ -1,9 +1,17 @@
 {% extends "layout.html" %}
-{% block page_title %}Kooplex Education{% endblock %}
-
-
 {% load static %}
 {% load project_buttons %}
+
+{% block page_title %}Kooplex Education{% endblock %}
+
+{% block head_content %}
+<style>
+.form-control:focus {
+  border-color: gray;
+  box-shadow: inset 0 1px 1px gray, 0 0 8px gray;
+}
+</style>
+{% endblock %}
 
 {% block submenu %}
 <ul class="navbar-nav flex-row flex-md-row">
