--- a/kooplexhub/project/templates/project_list.html
+++ b/kooplexhub/project/templates/project_list.html
@@ -2,15 +2,12 @@
 
 {% load static %}
 
-{% block chardinhelp %}
-         url: "{% static 'chardinjs/listproject.json' %}"
-{% endblock %}
-
 
 {% block realcontent %}
+  
 {% if userprojectbindinglist|length %}
-  <input class="form-control me-2 mb-3 mt-3" type="text" id="search_project" placeholder="Search project" title="Type in a name" data-intro="#search_project">
-  <div id="projectListPane" data-intro="#project_list">
+  <input class="form-control me-2 mb-3 mt-3" type="text" id="search_project" placeholder="Search project" title="Type in a name" >
+  <div id="projectListPane" >
     {% for upb in userprojectbindinglist %}
     {% include 'project_partial_list.html' with next_page='project:list' project=upb.project projectcontainerbindings=upb.projectcontainerbindings is_admin=upb.is_admin %}
     {% endfor %}
