--- a/kooplexhub/container/templates/container_new.html
+++ b/kooplexhub/container/templates/container_new.html
@@ -11,13 +11,13 @@
   {% csrf_token %}
   <div class="card bg-light border-secondary shadow p-3">
     {% title "Set the details of your new environment" %}
-    <div class="container-fluid d-flex flex-column flex-md-row">
-      <div class="d-flex w-100 w-md-75">
+    <div class="d-flex flex-column flex-md-row">
+      <div class="flex-fill w-100 w-md-75">
         <table>
           {{ form.as_table }}
         </table>
       </div>
-      <div class="d-flex w-100 w-md-50">
+      <div class="flex-fill d-flex ms-3 w-100 w-md-50">
         <div ata-toggle="tooltip" title="Please select an option from the image dropdown to check its description."  class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
           <p class="fw-bolder">Image description:&nbsp;</p>
           <p id="imageDescription"></p>
