--- a/kooplexhub/education/templates/assignment_student.html
+++ b/kooplexhub/education/templates/assignment_student.html
@@ -2,18 +2,41 @@
 
 {% load render_table from django_tables2 %}
 {% load static %}
+{% load extras %}
 
 
 {% block realcontent %}
-{% if t_submit.rows %}
-  <form id="assignments-submitform" class="form-horizontal was-validated" action="{% url 'education:submit' %}" method="post">
-    <div class="mb-2">{% include 'save_apply_cancel.html' %}</div>
+{% if t_assignment.data|length %}
+  <form id="assignments-submitform" class="form-horizontal" action="{% url 'education:submit' %}" method="post">
     {% csrf_token %}
-    {% render_table t_submit %}
-    {% include 'apply_cancel.html' %}
+    {% title_with_button "Select assignments to submit" button_label="Hand in" button_icon="bi bi-box-arrow-up-right" button_color="btn-success" %}
+    <input class="form-control me-2 mb-3 mt-3" type="text" id="search_assignment" placeholder="Search course or assignment" title="Type in a name" >
+    {% render_table t_assignment %}
   </form>
-  {% else %}
-   {% include 'empty.html' %}
-  </div>
+{% else %}
+  {% include 'empty.html' with title=empty_title empty=empty_body %}
 {% endif %}
+{% endblock %}
+
+{% block scripts %}
+<script>
+$("#search_assignment").keyup(function() {
+  var pattern = $( this ).val().toUpperCase();
+  console.log( "search: " + pattern );
+  $("input[id^='srch-']").each(function() {
+    hide_it = false;
+    if (pattern.length > 0) {
+        var s = $( this ).val().toUpperCase();
+        if ( ! (s.indexOf(pattern) > -1) ) {
+	  hide_it = true;
+        }
+        if (hide_it) {
+          $( this ).parent().parent().hide();
+        } else {
+          $( this ).parent().parent().show();
+        }
+    }
+  });
+});
+</script>
 {% endblock %}
