--- a/kooplexhub/education/templates/course_configure.html
+++ b/kooplexhub/education/templates/course_configure.html
@@ -65,24 +65,24 @@
       {% endif %}
     </div>
     <div class="tab-pane fade {% if active == "teacher" %}show active{% endif %}" id="addteachersCourse" role="tabpanel" aria-labelledby="tab-teacher">
-      <div class="container-fluid d-flex flex-row justify-content-between align-items-baseline">
-        <div>
-          <input class="form-control me-2 mb-3 mt-3" type="text" id="search_teacher_add" placeholder="Search teacher" title="Type in a name" data-intro="#search_teacher">
+      <div class="d-flex align-items-baseline">
+        <div class="flex-fill w-100 me-1">
+          <input class="form-control me-2 mb-3 mt-3" type="text" id="search_teacher_add" placeholder="Search teacher" title="Type in a name">
           {% render_table t_teachers_add %}
         </div>
-        <div>
+        <div class="flex-fill w-100 mb-1">
           {% render_table t_teachers %}
         </div>
       </div>
     </div>
     <div class="tab-pane fade {% if active == "student" %}show active{% else %}false{% endif %}" id="addstudentsCourse" role="tabpanel" aria-labelledby="tab-student">
       <p class="alert alert-danger"><button type="submit" class="btn btn-danger" name="button" value="reset" onclick="return confirm('Are you sure?');">Reset</button> Remove all {{ t_students.data|length }} students from the course.</p>
-      <div class="container-fluid d-flex flex-row justify-content-between align-items-baseline">
-        <div>
-          <input class="form-control me-2 mb-3 mt-3" type="text" id="search_student_add" placeholder="Search student" title="Type in a name" data-intro="#search_student">
+      <div class="d-flex align-items-baseline">
+        <div class="flex-fill w-100 me-1">
+          <input class="form-control me-2 mb-3 mt-3" type="text" id="search_student_add" placeholder="Search student" title="Type in a name">
           {% render_table t_students_add %}
         </div>
-        <div>
+        <div class="flex-fill w-100 mb-1">
           {% render_table t_students %}
         </div>
       </div>
