--- a/kooplexhub/hub/templates/datetime_pick.html
+++ b/kooplexhub/hub/templates/datetime_pick.html
@@ -1,5 +1,5 @@
 <div class="input-group log-event" id="linkedPicker-{{widget.attrs.id}}" data-td-target-input="nearest" data-td-target-toggle="nearest">
-	<input id="input-{{widget.attrs.id}}" name="{{widget.attrs.id}}" type="text" class="form-control" data-td-target="#linkedPicker-{{widget.attrs.id}}">
+  <input id="input-{{widget.attrs.id}}" name="{{widget.attrs.name}}" type="text" class="form-control" data-td-target="#linkedPicker-{{widget.attrs.id}}">
   <span class="input-group-text" data-td-target="#linkedPicker-{{widget.attrs.id}}" data-td-toggle="datetimepicker">
     <span class="{{widget.attrs.icon}}"></span>
   </span>
