--- a/kooplexhub/project/templates/project_join.html
+++ b/kooplexhub/project/templates/project_join.html
@@ -4,13 +4,10 @@
 {% load render_table from django_tables2 %}
 {% load extras %}
 
-{% block chardinhelp %}
-         url: "{% static 'chardinjs/joinproject.json' %}"
-{% endblock %}
 
 {% block realcontent %}
 
-<div class="card shadow mt-3 p-3 mb-5 bg-light rounded" data-intro="#join_project"> 
+<div class="card shadow mt-3 p-3 mb-5 bg-light rounded" > 
 <form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
   {% csrf_token %}
   {% if t_joinable.data|length > 0 %}
@@ -19,7 +16,7 @@
       {% render_table t_joinable %}
   </div>
   {% else %}
-    <p>There are no projects to join.</p>
+   {% include 'empty.html' with empty_body="There are no projects to join." skip_border=True %}
   {% endif %}
 </form>
 </div>
