--- a/kooplexhub/project/templates/project_new.html
+++ b/kooplexhub/project/templates/project_new.html
@@ -9,15 +9,15 @@
     {% csrf_token %}
   <div class="card bg-light border-secondary shadow p-3">
     {% title "Describe your new project" %}
-    <div class="container-fluid d-flex flex-row">
-      <div class="d-flex">
+    <div class="container-fluid d-flex flex-column flex-md-row">
+      <div class="d-flex w-100 w-md-75">
         <table>
           {{ form.as_table }}
         </table>
       </div>
-      <div class="d-flex ms-3">
-        <div>
-          <p class="fw-bolder">Image description:</p>
+      <div class="d-flex ms-3 w-100 w-md-50">
+        <div data-toggle="tooltip" title="Please select an option from the image dropdown to check its description." class="d-flex bg-warning rounded p-2 w-100 mt-2 mt-md-0">
+          <p class="fw-bolder">Image description:&nbsp;</p>
 	  <p id="imageDescription"></p>
 	</div>
       </div>
