--- a/kooplexhub/project/templates/project_showhide.html
+++ b/kooplexhub/project/templates/project_showhide.html
@@ -3,9 +3,6 @@
 {% load static %}
 {% load extras %}
 
-{% block chardinhelp %}
-         url: "{% static 'chardinjs/menueducation_env.json' %}"
-{% endblock %}
 
 {% block realcontent %}
 <form id="project-manage" class="form-horizontal" action="{% url 'project:showhide' %}" method="post">
@@ -24,15 +21,6 @@
 
 {% block scripts %}
 <script>  
-$("input[name='show'").change(function() {
-  var icon;
-  if ( $( this ).is(":checked") ) {
-    icon = "bi-eye";
-  } else {
-    icon = "bi-eye-slash";
-  }
-  $( this ).parent().children("label").children("i").attr("class", "bi " + icon);
-});
 $("#search_project").keyup(function() {
   var pattern = $( this ).val().toUpperCase();
   console.log( "search: " + pattern );
@@ -59,5 +47,7 @@ $("#search_project").keyup(function() {
   });
 });
 </script>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
 {% endblock %}
 
