--- a/kooplexhub/project/templates/project_join.html
+++ b/kooplexhub/project/templates/project_join.html
@@ -1,12 +1,12 @@
 {% extends "project_layout.html" %}
-
-{% load static %}
 {% load render_table from django_tables2 %}
 {% load extras %}
 
+{% block head_content %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
+{% endblock %}
 
 {% block realcontent %}
-
 <div class="card shadow mt-3 p-3 mb-5 bg-light rounded" > 
 <form id="project-manage" class="form-horizontal" action="{% url 'project:join' %}" method="post">
   {% csrf_token %}
@@ -22,3 +22,6 @@
 </div>
 {% endblock %}
 
+{% block scripts %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
+{% endblock %}
