--- a/kooplexhub/project/templates/project_layout.html
+++ b/kooplexhub/project/templates/project_layout.html
@@ -5,6 +5,7 @@
 {% block page_title %}Kooplex Projects{% endblock %}
 
 {% block head_content %}
+{% block head_child %}{% endblock %}
 <style>
 .form-control:focus {
   border-color: gray;
