--- a/kooplexhub/project/templates/project_showhide.html
+++ b/kooplexhub/project/templates/project_showhide.html
@@ -3,6 +3,9 @@
 {% load static %}
 {% load extras %}
 
+{% block head_child %}
+<link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
+{% endblock %}
 
 {% block realcontent %}
 <form id="project-manage" class="form-horizontal" action="{% url 'project:showhide' %}" method="post">
@@ -47,7 +50,6 @@ $("#search_project").keyup(function() {
   });
 });
 </script>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
 {% endblock %}
 
