--- a/kooplexhub/project/templates/project_configure.html
+++ b/kooplexhub/project/templates/project_configure.html
@@ -3,7 +3,7 @@
 {% load extras %}
 
 {% block head_content %}
-<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/css/bootstrap5-toggle.min.css" rel="stylesheet">
 <style>
 .mytab{
   color: rgb(196, 196, 196);
@@ -72,5 +72,5 @@ $("#projectConfigTabs li a").on("click", function () {
   $.cookie("configure_project_tab", tab, { 'path': '/', 'secure': true });
 });
 </script>
-<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap5-toggle@3.7.0/js/bootstrap5-toggle.min.js"></script>
 {% endblock %}
